clippy.err
error[E0433]: failed to resolve: use of undeclared type or module `Attention`
   --> src/weather/mod.rs:200:28
    |
200 |                 attention: Attention::Normal,
    |                            ^^^^^^^^^ use of undeclared type or module `Attention`

error[E0412]: cannot find type `BlockOutputBody` in this scope
  --> src/format/blocks/mod.rs:16:37
   |
16 |           block_sender: Sender<Option<BlockOutputBody>>,
   |                                       ^^^^^^^^^^^^^^^
   | 
  ::: src/format/blocks/output.rs:4:1
   |
4  | / pub struct BlockOutput {
5  | |     pub block_name: String,
6  | |     pub body: Option<BlockOutputBody>,
7  | | }
   | |_- similarly named struct `BlockOutput` defined here
   |
help: a struct with a similar name exists
   |
16 |         block_sender: Sender<Option<BlockOutput>>,
   |                                     ^^^^^^^^^^^
help: possible candidate is found in another module, you can import it into scope
   |
3  | use crate::format::blocks::output::BlockOutputBody;
   |
help: you might be missing a type parameter
   |
13 | pub trait Block<BlockOutputBody>: Send {
   |                ^^^^^^^^^^^^^^^^^

error[E0425]: cannot find value `report` in this scope
   --> src/weather/mod.rs:160:32
    |
160 |                 let mut desc = report.weather[0].description;
    |                                ^^^^^^ not found in this scope

error[E0728]: `await` is only allowed inside `async` functions and blocks
   --> src/weather/mod.rs:216:16
    |
215 | pub fn get_external_ip() -> Result<String, MuseStatusError> {
    |        --------------- this is not `async`
216 |     let resp = reqwest::get("http://checkip.amazonaws.com").await?;
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ only allowed inside `async` functions and blocks

error[E0308]: mismatched types
  --> src/daemon/mod.rs:86:19
   |
86 |         (handles, senders)
   |                   ^^^^^^^ expected struct `std::string::String`, found enum `std::option::Option`
   |
   = note: expected struct `std::vec::Vec<std::sync::mpsc::Sender<std::string::String>>`
              found struct `std::vec::Vec<std::sync::mpsc::Sender<std::option::Option<format::blocks::output::BlockOutputBody>>>`

error[E0308]: mismatched types
  --> src/weather/mod.rs:18:28
   |
18 |     fn to_string(&self) -> String {
   |        ---------           ^^^^^^ expected struct `std::string::String`, found `()`
   |        |
   |        implicitly returns `()` as its body has no tail or `return` expression
...
24 |         String::from(s);
   |                        - help: consider removing this semicolon

error[E0107]: wrong number of type arguments: expected 0, found 2
  --> src/weather/mod.rs:44:44
   |
44 |         let weather_icons = HashMap::new::<String, char>();
   |                                            ^^^^^^  ^^^^ unexpected type argument
   |                                            |
   |                                            unexpected type argument

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0107, E0308, E0412, E0425, E0433, E0728.
For more information about an error, try `rustc --explain E0107`.
error: could not compile `muse_status`.

To learn more, run the command again with --verbose.
